# ProjectNebulus

./: .breakpoints  .deepsource.toml  .env  .gitignore  .replit  Dockerfile  LICENSE  PRIVACY.md  ProjectNebulus.ini  README.md  babel.cfg  build.css  disc_metadata.py  main.py  manifest.appcache  oldmain.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements.txt  schoology.json  spotipy.py  spotipy1.py  tailwind.config.js  vercel.json  wsgi.py
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: black_formatting.yml  deploy.yaml  deploy.yml  docker-image.yml  pylint.yml
.spotify_caches/: 744c9387-4137-4555-8c7b-1a6bd7c30f49  aaf2826f-4963-4cb4-96f7-c8397a560b81
api/: .env
app/: __init__.py  main.py  schools.json
app/root/: root.py
app/routes/: __init__.py  about.py  api.py  connections.py  courses.py  dashboard.py  home.py  lms.py  logout.py  main_blueprint.py  points.py  pricing.py  profile.py  settings.py  signin.py  signup.py  theapi.py
app/static/: sitemap.xml  spotipy1.py  sw.js
app/templates/: ComingSoon.html  about.html  about.md  bellschedule.html  blog.html  calendar.html  chat.html  connectCanvas.html  connectSchoology.html  connectSpotify.html  control.html  courseModal.html  courses.html  dashboard.html  developerportal.html  email.html  files.html  footer.html  ide.html  joinschool.html  joinschoolembed.html  layout.html  lms.html  music.html  musicresults.html  musictrack.html  musicvideo.html  musixmatch.html  navbar.html  navbar_mobile.html  notepad.html  planner.html  points.html  pricing.html  privacy.html  scheduler.html  schedulercss.css  school.html  study.html  support.html  (+2 more)
app/utils/: logged_in.py  private_endpoint.py
lib/: ex.html  processor.js  worker.js
oauth-spotify/: app.js  package-lock.json
templates/: 404.html  500.html  about.html  chat.html  connectClassroom.html  connectSchoology.html  course.html  dashboard.html  developerportal.html  developers.html  email.html  footer.html  holidays.html  index.html  layout.html  lms.html  login.html  manifest.appcache  music.html  musiqueworld.html  navbar.html  new_course.html  points.html  profile.html  settings.html  signin.html  signup.html
(+1147 files in other folders)
