[tool.poetry]
name = "ProjectNebulus"
version = "0.1.0"
description = ""
authors = ["nicholasxwang <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
youtube_dl = "^2021.12.17"
pymongo = "^4.0.1"
musixmatch = "^0.9"
google-cloud-vision = "^2.6.3"
Werkzeug = "^2.0.2"
dnspython = "^2.1.0"
python-dotenv = "^0.19.2"
swspotify = "^1.2.2"
PyAutoGUI = "^0.9.53"
spotipy = "^2.19.0"
dacite = "^1.6.0"
schoolopy = "^0.2.2"
waitress = "^2.0.0"
tortilla = "^0.5.0"
chempy = "^0.8.2"
Flask-GraphQL = "^2.0.1"
graphene = "^3.0"
graphene-mongo = "^0.2.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
