[tool.poetry]
name = "repl_python3_Project-Nebulus"
version = "0.1.0"
description = ""
authors = ["nicholasxwang <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.19.2"
waitress = "^2.0.0"
dnspython = "^2.2.0"
tortilla = "^0.5.0"
dacite = "^1.6.0"
schoolopy = "^0.2.2"
spotipy = "^2.19.0"
swspotify = "^1.2.3"
youtube_dl = "^2021.12.17"
musixmatch = "^0.9"
graphene-mongo = "^0.2.14"
graphql-server = "^3.0.0-beta.5"
Werkzeug = "^2.0.3"
Flask = "^2.0.3"
graphql-server-core = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
